// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label should render 1`] = `
<div>
  <div
    class="Label-sc-4akkzw-0 dgtFy"
    color="primary"
  />
</div>
`;

exports[`Label should render a large one 1`] = `
<div>
  <div
    class="Label-sc-4akkzw-0 gLKaUd"
    color="primary"
  />
</div>
`;

exports[`Label should render a small one 1`] = `
<div>
  <div
    class="Label-sc-4akkzw-0 dgtFy"
    color="primary"
  />
</div>
`;

exports[`Label should render as solid 1`] = `
<div>
  <div
    class="Label-sc-4akkzw-0 kCNajM"
    color="primary"
  />
</div>
`;

exports[`Label should render as solid and danger 1`] = `
<div>
  <div
    class="Label-sc-4akkzw-0 dIBNEL"
    color="danger"
  />
</div>
`;

exports[`Label should render as solid and default 1`] = `
<div>
  <div
    class="Label-sc-4akkzw-0 bEleDA"
    color="neutral"
  />
</div>
`;

exports[`Label should render as solid and primary 1`] = `
<div>
  <div
    class="Label-sc-4akkzw-0 kCNajM"
    color="primary"
  />
</div>
`;

exports[`Label should render as solid and success 1`] = `
<div>
  <div
    class="Label-sc-4akkzw-0 kUYBhA"
    color="success"
  />
</div>
`;

exports[`Label should render danger color 1`] = `
<div>
  <div
    class="Label-sc-4akkzw-0 gOcLKd"
    color="danger"
  />
</div>
`;

exports[`Label should render neutral color 1`] = `
<div>
  <div
    class="Label-sc-4akkzw-0 jAUPwt"
    color="neutral"
  />
</div>
`;

exports[`Label should render primary color 1`] = `
<div>
  <div
    class="Label-sc-4akkzw-0 dgtFy"
    color="primary"
  />
</div>
`;

exports[`Label should render success color 1`] = `
<div>
  <div
    class="Label-sc-4akkzw-0 fSJwcq"
    color="success"
  />
</div>
`;

exports[`Label should render warning color 1`] = `
<div>
  <div
    class="Label-sc-4akkzw-0 ccXYlh"
    color="warning"
  />
</div>
`;
